--- a/src/locales/kr/testimonials.json
+++ b/src/locales/kr/testimonials.json
@@ -3,7 +3,7 @@
     "name": "Jacob Dalton",
     "title": "Technical Lead and Engineering Manager",
     "lines": {
-      "0": "저는 Sentera에서 현진을 고용했고, 그녀가 정말 깊고 확고한 경험을 축적했음에도 불구하고 그녀를 신입 엔지니어로 이상적인 후보자라고 생각합니다.",
+      "0": "저는 Sentera에서 현진을 고용했습니다. 그녀는 정말 깊고 확고한 경험을 축적했음에도 불구하고 신입 엔지니어로 이상적인 후보자라고 생각합니다.",
       "1": "그녀는 항상 열린 마음을 가지고 있으며 훌륭하고 긍정적인 태도와 엄청난 학습 능력을 갖추고 있습니다. 그녀는 (제가 기술팀을 위해 구매한 책을 모두 읽으며) 스스로 자기 개발에 열중합니다. 저는 그녀가 Sentera 입사 초기 때 크고 심오한 기술 기능을 맡는 것을 보았습니다. 과연 신입 사원이 해낼 수 있을까 회의적이었지만 그녀는 제 기대 이상으로 그것들을 완성하였습니다. 우리가 함께 일하는 동안 그녀의 능력은 빠르고 지속적으로 성장했습니다.",
       "2": "어느 팀이든 현진과 함께라면 행운이 있을 것입니다."
     }
@@ -49,9 +49,9 @@
     "title": "Director of IT",
     "lines": {
       "0": "저는 2018년부터 미네소타 대학교 멘토링 프로그램을 통해 현진의 멘토였습니다. 우리의 관계를 매우 보람있게 만든 그녀에 관한 많은 것들이 있습니다.",
-      "1": "현진은 지적으로 호기심이 많습니다. 그녀는 국제 학생으로서 미국 문화를 배우고 몰입하는 것을 좋아합니다. 또한 컴퓨터 사이언스 학생으로서 다양한 기술에 관심이 많으며 새로 배운 기술을 개인 프로젝트를 통해 지속적으로 적용합니다.",
-      "2": "현진은 매우 동기 부여된 사람입니다. 그녀는 학교(컴퓨터 사이언스 전공)에서 열심히 공부하며 항상 경험을 넓힐 수 있는 인턴십/자원봉사 기회를 찾고 있습니다.",
-      "3": "책임감 - 이것은 현진을 차별화시키는 것 중 하나입니다. 격주 회의에서 우리는 항상 다음 회의를 위해 과제(예 : 독서, 이력서 작성, 개인 사이트 만들기 등) 목록을 작성하고 현진은 항상 제시간에 항목을 완성합니다.",
+      "1": "1. 현진은 지적으로 호기심이 많습니다. 그녀는 국제 학생으로서 미국 문화를 배우고 몰입하는 것을 좋아합니다. 또한 컴퓨터 사이언스 학생으로서 다양한 기술에 관심이 많으며 새로 배운 기술을 개인 프로젝트를 통해 지속적으로 적용합니다.",
+      "2": "2. 현진은 매우 동기 부여된 사람입니다. 그녀는 학교(컴퓨터 사이언스 전공)에서 열심히 공부하며 항상 경험을 넓힐 수 있는 인턴십/자원봉사 기회를 찾고 있습니다.",
+      "3": "3. 책임감 - 이것은 현진을 차별화시키는 것 중 하나입니다. 격주 회의에서 우리는 항상 다음 회의를 위해 과제(예: 독서, 이력서 작성, 개인 사이트 만들기 등) 목록을 작성하고 현진은 항상 제시간에 항목을 완성합니다.",
       "4": "저는 현진과 같은 훌륭한 사람과 함께하게 되어 매우 기뻤습니다!"
     }
   }
