--- a/src/locales/kr/testimonials.json
+++ b/src/locales/kr/testimonials.json
@@ -4,7 +4,7 @@
     "title": "Technical Lead and Engineering Manager",
     "lines": {
       "0": "저는 Sentera에서 현진을 고용했습니다. 그녀는 정말 깊고 확고한 경험을 축적했음에도 불구하고 신입 엔지니어로 이상적인 후보자라고 생각합니다.",
-      "1": "그녀는 항상 열린 마음을 가지고 있으며 훌륭하고 긍정적인 태도와 엄청난 학습 능력을 갖추고 있습니다. 그녀는 (제가 기술팀을 위해 구매한 책을 모두 읽으며) 스스로 자기 개발에 열중합니다. 저는 그녀가 Sentera 입사 초기 때 크고 심오한 기술 기능을 맡는 것을 보았습니다. 과연 신입 사원이 해낼 수 있을까 회의적이었지만 그녀는 제 기대 이상으로 그것들을 완성하였습니다. 우리가 함께 일하는 동안 그녀의 능력은 빠르고 지속적으로 성장했습니다.",
+      "1": "그녀는 항상 열린 마음을 가지고 있으며 훌륭하고 긍정적인 태도와 엄청난 학습 능력을 갖추고 있습니다. 그녀는 (제가 기술팀을 위해 구매한 책을 모두 읽으며) 스스로 자기 개발에 열중했습니다. 저는 그녀가 Sentera 입사 초기 때 크고 심오한 기술 기능을 맡는 것을 보았습니다. 과연 신입 사원이 해낼 수 있을까 회의적이었지만 그녀는 제 기대 이상으로 그것들을 완성하였습니다. 우리가 함께 일하는 동안 그녀의 능력은 빠르고 지속적으로 성장했습니다.",
       "2": "어느 팀이든 현진과 함께라면 행운이 있을 것입니다."
     }
   },
