--- a/src/locales/kr/blog.json
+++ b/src/locales/kr/blog.json
@@ -9,5 +9,7 @@
     "title": "SmartThings 여름 인턴십 후기",
     "date": "2020년 9월 24일",
     "sub": "인턴 기간 동안 진행했던 종합 모니터 시스템은 프로덕션 환경에서 발생할 수 있는 모든 문제에 대해 카나리아 역할을 합니다. 이것은 API 호출로 시작하여 이벤트 전달로 끝나는 프로세스 시간을 측정해 기록합니다."
-  }
+  },
+  "published": "최초 입력",
+  "updated": "최종 수정"
 }
