--- a/src/locales/kr/testimonials.json
+++ b/src/locales/kr/testimonials.json
@@ -2,11 +2,7 @@
   "jacob": {
     "name": "Jacob Dalton",
     "title": "Technical Lead and Engineering Manager",
-    "lines": {
-      "0": "저는 Sentera에서 현진을 고용했습니다. 그녀는 정말 깊고 확고한 경험을 축적했음에도 불구하고 신입 엔지니어로 이상적인 후보자라고 생각합니다.",
-      "1": "그녀는 항상 열린 마음을 가지고 있으며 훌륭하고 긍정적인 태도와 엄청난 학습 능력을 갖추고 있습니다. 그녀는 (제가 기술팀을 위해 구매한 책을 모두 읽으며) 스스로 자기 개발에 열중했습니다. 저는 그녀가 Sentera 입사 초기 때 크고 심오한 기술 기능을 맡는 것을 보았습니다. 과연 신입 사원이 해낼 수 있을까 회의적이었지만 그녀는 제 기대 이상으로 그것들을 완성하였습니다. 우리가 함께 일하는 동안 그녀의 능력은 빠르고 지속적으로 성장했습니다.",
-      "2": "어느 팀이든 현진과 함께라면 행운이 있을 것입니다."
-    }
+    "lines": "저는 Sentera에서 현진을 고용했습니다. 그녀는 정말 깊고 확고한 경험을 축적했음에도 불구하고 신입 엔지니어로 이상적인 후보자라고 생각합니다.\n그녀는 항상 열린 마음을 가지고 있으며 훌륭하고 긍정적인 태도와 엄청난 학습 능력을 갖추고 있습니다. 그녀는 (제가 기술팀을 위해 구매한 책을 모두 읽으며) 스스로 자기 개발에 열중했습니다. 저는 그녀가 Sentera 입사 초기 때 크고 심오한 기술 기능을 맡는 것을 보았습니다. 과연 신입 사원이 해낼 수 있을까 회의적이었지만 그녀는 제 기대 이상으로 그것들을 완성하였습니다. 우리가 함께 일하는 동안 그녀의 능력은 빠르고 지속적으로 성장했습니다.\n어느 팀이든 현진과 함께라면 행운이 있을 것입니다."
   },
   "joe": {
     "name": "Joe Spencer",
@@ -16,14 +12,7 @@
   "dan": {
     "name": "Dan Schoppe",
     "title": "Senior Software Engineer",
-    "lines": {
-      "0": "현진은 훌륭한 엔지니어이며 함께 일하는 것이 즐거웠습니다.",
-      "1": "현진은 Sentera에서 복합적인 React 매핑 프로젝트에 기여했습니다. 그녀는 최신 프론트엔드 도구, 기술 및 패턴(선언적 디자인, React 훅, Apollo 클라이언트를 통한 GraphQL API 액세스, Redux, React providers 등)을 사용하여 높은 기능의 애플리케이션을 개발하였습니다.",
-      "2": "저희 고객은 애플리케이션에서 고가용성과 고성능을 기대했습니다. 현진은 애자일 모범 사례(그루밍, 계획, 레트로 및 스탠드업을 포함한 스프린트)를 사용하는 팀에 속해 사려 깊은 기여를 했습니다. 우리는 쉬는 시간 없이 제품 기능을 추가하기 위해 빠르게 움직였습니다. 그녀는 병합된 GitHub 풀 리퀘스트를 기반으로 자동 배포 변경 사항을 포함한 최신 CI/CD 모범 사례를 적용하였습니다.",
-      "3": "현진은 똑똑합니다. 그녀는 복잡한 개념들을 믿을 수 없을 정도로 빠르게 파악하고 배우기를 열망합니다. 그녀는 어려운 문제를 피하지 않고 오히려 도전을 받아들입니다. 그녀는 어려운 문제들을 해결하기 위해 놀라울 정도로 결단력이 있으며, 이것은 빠르게 움직이는 복잡한 업무 환경에서 아주 훌륭한 능력입니다.",
-      "4": "우리 모두가 알고 있듯이, 소프트웨어 엔지니어링에는 많은 양의 협업과 개인의 의사소통 능력이 함께 필요합니다. 이런 점에서 볼 때 현진은 다른 사람들과 협력하는 데 능숙합니다. 그녀는 팀의 최우선 순위 항목에 대해 기꺼이 작업하길 원하며 그것을 해낼 수 있는 충분한 능력이 있습니다. 그녀는 페어 프로그래밍에 능숙하고 코드 리뷰 피드백을 섬세하고 긍정적인 방식으로 주고받습니다.",
-      "5": "현진은 훌륭한 동료였으며 당신의 프론트엔드 팀에 큰 기여를 할 것입니다!"
-    }
+    "lines": "현진은 훌륭한 엔지니어이며 함께 일하는 것이 즐거웠습니다.\n현진은 Sentera에서 복합적인 React 매핑 프로젝트에 기여했습니다. 그녀는 최신 프론트엔드 도구, 기술 및 패턴(선언적 디자인, React 훅, Apollo 클라이언트를 통한 GraphQL API 액세스, Redux, React providers 등)을 사용하여 높은 기능의 애플리케이션을 개발하였습니다.\n저희 고객은 애플리케이션에서 고가용성과 고성능을 기대했습니다. 현진은 애자일 모범 사례(그루밍, 계획, 레트로 및 스탠드업을 포함한 스프린트)를 사용하는 팀에 속해 사려 깊은 기여를 했습니다. 우리는 쉬는 시간 없이 제품 기능을 추가하기 위해 빠르게 움직였습니다. 그녀는 병합된 GitHub 풀 리퀘스트를 기반으로 자동 배포 변경 사항을 포함한 최신 CI/CD 모범 사례를 적용하였습니다.\n현진은 똑똑합니다. 그녀는 복잡한 개념들을 믿을 수 없을 정도로 빠르게 파악하고 배우기를 열망합니다. 그녀는 어려운 문제를 피하지 않고 오히려 도전을 받아들입니다. 그녀는 어려운 문제들을 해결하기 위해 놀라울 정도로 결단력이 있으며, 이것은 빠르게 움직이는 복잡한 업무 환경에서 아주 훌륭한 능력입니다.\n우리 모두가 알고 있듯이, 소프트웨어 엔지니어링에는 많은 양의 협업과 개인의 의사소통 능력이 함께 필요합니다. 이런 점에서 볼 때 현진은 다른 사람들과 협력하는 데 능숙합니다. 그녀는 팀의 최우선 순위 항목에 대해 기꺼이 작업하길 원하며 그것을 해낼 수 있는 충분한 능력이 있습니다. 그녀는 페어 프로그래밍에 능숙하고 코드 리뷰 피드백을 섬세하고 긍정적인 방식으로 주고받습니다.\n현진은 훌륭한 동료였으며 당신의 프론트엔드 팀에 큰 기여를 할 것입니다!"
   },
   "john": {
     "name": "John Osberg",
@@ -38,21 +27,11 @@
   "steven": {
     "name": "Steven Pliam",
     "title": "Head Software Engineer",
-    "lines": {
-      "0": "현진과 함께 일하고 소통한 것은 정말 큰 축복이었습니다. 그녀는 엄청난 호기심을 업무에 가져오고 아무리 평범한 프로젝트라도 모든 구성 요소에 대해 철저하고 엄격하게 연구하는 사람입니다. 저는 이런 사람을 거의 만나지 못했습니다. 차이를 만드는 세부 사항에 대한 그러한 헌신과 열정은 사람들 사이에서 찾아보기 매우 어렵습니다. 현진과 함께 일하는 것에 대해 제가 매우 기쁘고 영감을 얻은 것은 그녀의 삶에 대한 열정과 호기심, 특히 기술과 사회에서의 역할에 관한 것입니다. 컴퓨터 과학에 대한 그녀의 높은 관심은 명백하지만, 기술 자체에 대한 관심만은 아닙니다. 그녀는 기술 발전에 있어서 확실한 미래 비전을 품고 있습니다. 그것은 전 세계에 훨씬 더 넓은 범위의 기능과 책임을 포함하고 있으며 나는 이 목표가 그녀에게 매우 중요하다는 뚜렷한 인상을 받았습니다.",
-      "1": "이러한 뛰어난 자질 외에도, 현진은 어떠한 직무든지 수행할 수 있는 능력과 함께 비범한 조직 기술을 보유하고 있습니다. 그녀는 그것들을 완성하는 효능에 큰 자부심을 가질 것입니다. 우리 팀에서 그녀의 존재는 그 자체로 일을 추적하는 힘이었습니다. 우리는 종종 크고 작은 거대한 문제 해결 과제를 다루어야 했습니다. 그리고 그녀의 집중적이며 체계적인 자세를 유지하는 능력은 주의가 필요한 모든 것을 최상위로 유지하려는데 도움이 되었습니다.",
-      "2": "만약 당신에게 행운이 생겨 현진과 함께 일할 기회가 생긴다면, 당신의 조직이 그녀에게 어떤 자원이 있는지 인식하기까지는 오래 걸리지 않을 것이라고 확신할 수 있습니다."
-    }
+    "lines": "현진과 함께 일하고 소통한 것은 정말 큰 축복이었습니다. 그녀는 엄청난 호기심을 업무에 가져오고 아무리 평범한 프로젝트라도 모든 구성 요소에 대해 철저하고 엄격하게 연구하는 사람입니다. 저는 이런 사람을 거의 만나지 못했습니다. 차이를 만드는 세부 사항에 대한 그러한 헌신과 열정은 사람들 사이에서 찾아보기 매우 어렵습니다. 현진과 함께 일하는 것에 대해 제가 매우 기쁘고 영감을 얻은 것은 그녀의 삶에 대한 열정과 호기심, 특히 기술과 사회에서의 역할에 관한 것입니다. 컴퓨터 과학에 대한 그녀의 높은 관심은 명백하지만, 기술 자체에 대한 관심만은 아닙니다. 그녀는 기술 발전에 있어서 확실한 미래 비전을 품고 있습니다. 그것은 전 세계에 훨씬 더 넓은 범위의 기능과 책임을 포함하고 있으며 나는 이 목표가 그녀에게 매우 중요하다는 뚜렷한 인상을 받았습니다.\n이러한 뛰어난 자질 외에도, 현진은 어떠한 직무든지 수행할 수 있는 능력과 함께 비범한 조직 기술을 보유하고 있습니다. 그녀는 그것들을 완성하는 효능에 큰 자부심을 가질 것입니다. 우리 팀에서 그녀의 존재는 그 자체로 일을 추적하는 힘이었습니다. 우리는 종종 크고 작은 거대한 문제 해결 과제를 다루어야 했습니다. 그리고 그녀의 집중적이며 체계적인 자세를 유지하는 능력은 주의가 필요한 모든 것을 최상위로 유지하려는데 도움이 되었습니다.\n만약 당신에게 행운이 생겨 현진과 함께 일할 기회가 생긴다면, 당신의 조직이 그녀에게 어떤 자원이 있는지 인식하기까지는 오래 걸리지 않을 것이라고 확신할 수 있습니다."
   },
   "ming": {
     "name": "Ming Tan",
     "title": "Director of IT",
-    "lines": {
-      "0": "저는 2018년부터 미네소타 대학교 멘토링 프로그램을 통해 현진의 멘토였습니다. 우리의 관계를 매우 보람있게 만든 그녀에 관한 많은 것들이 있습니다.",
-      "1": "1. 현진은 지적으로 호기심이 많습니다. 그녀는 국제 학생으로서 미국 문화를 배우고 몰입하는 것을 좋아합니다. 또한 컴퓨터 사이언스 학생으로서 다양한 기술에 관심이 많으며 새로 배운 기술을 개인 프로젝트를 통해 지속적으로 적용합니다.",
-      "2": "2. 현진은 매우 동기 부여된 사람입니다. 그녀는 학교(컴퓨터 사이언스 전공)에서 열심히 공부하며 항상 경험을 넓힐 수 있는 인턴십/자원봉사 기회를 찾고 있습니다.",
-      "3": "3. 책임감 - 이것은 현진을 차별화시키는 것 중 하나입니다. 격주 회의에서 우리는 항상 다음 회의를 위해 과제(예: 독서, 이력서 작성, 개인 사이트 만들기 등) 목록을 작성하고 현진은 항상 제시간에 항목을 완성합니다.",
-      "4": "저는 현진과 같은 훌륭한 사람과 함께하게 되어 매우 기뻤습니다!"
-    }
+    "lines": "저는 2018년부터 미네소타 대학교 멘토링 프로그램을 통해 현진의 멘토였습니다. 우리의 관계를 매우 보람있게 만든 그녀에 관한 많은 것들이 있습니다.\n1. 현진은 지적으로 호기심이 많습니다. 그녀는 국제 학생으로서 미국 문화를 배우고 몰입하는 것을 좋아합니다. 또한 컴퓨터 사이언스 학생으로서 다양한 기술에 관심이 많으며 새로 배운 기술을 개인 프로젝트를 통해 지속적으로 적용합니다.\n2. 현진은 매우 동기 부여된 사람입니다. 그녀는 학교(컴퓨터 사이언스 전공)에서 열심히 공부하며 항상 경험을 넓힐 수 있는 인턴십/자원봉사 기회를 찾고 있습니다.\n3. 책임감 - 이것은 현진을 차별화시키는 것 중 하나입니다. 격주 회의에서 우리는 항상 다음 회의를 위해 과제(예: 독서, 이력서 작성, 개인 사이트 만들기 등) 목록을 작성하고 현진은 항상 제시간에 항목을 완성합니다.\n저는 현진과 같은 훌륭한 사람과 함께하게 되어 매우 기뻤습니다!"
   }
 }
