--- a/src/locales/en/testimonials.json
+++ b/src/locales/en/testimonials.json
@@ -2,11 +2,7 @@
   "jacob": {
     "name": "Jacob Dalton",
     "title": "Technical Lead and Engineering Manager",
-    "lines": [
-      "I hired Jin at Sentera, and I would consider her an ideal candidate for an early career engineer although she's already accumulated a really solid depth and breadth of experience.",
-      "She has an open mind, a wonderful positive attitude, and an enormous capacity to learn. She naturally gravitates to self improvement (consuming the majority of books I bought for the technical team). I watched her take on a large and deeply technical feature early in her tenure at Sentera that I was skeptical a new hire could deliver, and she completed it beyond far beyond my expectations. Her skills grew rapidly and consistently throughout the time we worked together.",
-      "Any team would be lucky to have Jin."
-    ]
+    "lines": "I hired Jin at Sentera, and I would consider her an ideal candidate for an early career engineer although she's already accumulated a really solid depth and breadth of experience.\n She has an open mind, a wonderful positive attitude, and an enormous capacity to learn. She naturally gravitates to self improvement (consuming the majority of books I bought for the technical team). I watched her take on a large and deeply technical feature early in her tenure at Sentera that I was skeptical a new hire could deliver, and she completed it beyond far beyond my expectations. Her skills grew rapidly and consistently throughout the time we worked together.\n Any team would be lucky to have Jin."
   },
   "joe": {
     "name": "Joe Spencer",
@@ -16,14 +12,7 @@
   "dan": {
     "name": "Dan Schoppe",
     "title": "Senior Software Engineer",
-    "lines": {
-      "0": "Jin is a great engineer and a joy to work with.",
-      "1": "Jin was a contributor on a complex React mapping project at Sentera. She used the latest frontend tools, technologies, and patterns to build a highly functional application — think declarative design, React hooks, accessing a GraphQL API via Apollo Client, Redux, and React providers, etc.",
-      "2": "Our customers expected high availability and high performance from our application. Jin was on a team that used agile best practices (sprints including grooming, planning, retro, and standup) to make thoughtful contributions. We moved quickly to add product features without downtime. She used the latest CI/CD best practices, including auto-deployed changes upon merged GitHub pull requests.",
-      "3": "Jin is smart. She picks up on complex concepts incredibly quickly and is eager to learn. She doesn't shy away from hard problems, but instead embraces a challenge. In fact, she's incredibly determined to work through hard issues, which is a great quality when working in such a fast-moving, complex environment.",
-      "4": "As we all know, software engineering requires a large amount of collaboration and soft skills as well. Jin is great at collaborating with others. She's willing and able to work on the highest priority items for the team. She pair programs well and gives and receives thoughtful code review feedback in a positive manner.",
-      "5": "Jin was a great coworker and would make a great contribution to your frontend team!"
-    }
+    "lines": "Jin is a great engineer and a joy to work with.\nJin was a contributor on a complex React mapping project at Sentera. She used the latest frontend tools, technologies, and patterns to build a highly functional application — think declarative design, React hooks, accessing a GraphQL API via Apollo Client, Redux, and React providers, etc.\nOur customers expected high availability and high performance from our application. Jin was on a team that used agile best practices (sprints including grooming, planning, retro, and standup) to make thoughtful contributions. We moved quickly to add product features without downtime. She used the latest CI/CD best practices, including auto-deployed changes upon merged GitHub pull requests.\nJin is smart. She picks up on complex concepts incredibly quickly and is eager to learn. She doesn't shy away from hard problems, but instead embraces a challenge. In fact, she's incredibly determined to work through hard issues, which is a great quality when working in such a fast-moving, complex environment.\nAs we all know, software engineering requires a large amount of collaboration and soft skills as well. Jin is great at collaborating with others. She's willing and able to work on the highest priority items for the team. She pair programs well and gives and receives thoughtful code review feedback in a positive manner.\nJin was a great coworker and would make a great contribution to your frontend team!"
   },
   "john": {
     "name": "John Osberg",
@@ -38,21 +27,11 @@
   "steven": {
     "name": "Steven Pliam",
     "title": "Head Software Engineer",
-    "lines": {
-      "0": "It has been my great pleasure to work and interact with Hyunjin. I have rarely encountered a person who can bring such an inquisitive spirit to their work and such a thorough, rigorous investigation to every component of a project, no matter how banal. Such commitment and enthusiasm for the details that make the difference is exceedingly hard to find in people. What I also found very delightful, even inspiring, about working with Hyunjin was her passion and curiosity for life, but particularly with regard to technology and its role in society. Her high level of interest in computer science is obvious, but it's not just an interest in technology for its own sake; rather, I had the distinct impression that the vision she holds for her future role in developing technology embraces a much wider range of function and responsibility to the world, and that this is critically important to her.",
-      "1": "Apart from these standout qualities, I found that Hyunjin possessed extraordinary organizational skills along with the ability to go directly at any task; she would take great pride just in the efficacy of completing them. Her presence in our research group was, in itself, a force to keep things on track. As we often had to deal with a huge set of problem-solving issues, both large and small, her ability to focus and stay organized often helped my own efforts to keep on top of everything needing attention.",
-      "2": "If you'll be lucky enough to have the opportunity to work with Hyunjin, I can promise that it won't be long before your organization recognizes what a resource it has in this person."
-    }
+    "lines": "It has been my great pleasure to work and interact with Hyunjin. I have rarely encountered a person who can bring such an inquisitive spirit to their work and such a thorough, rigorous investigation to every component of a project, no matter how banal. Such commitment and enthusiasm for the details that make the difference is exceedingly hard to find in people. What I also found very delightful, even inspiring, about working with Hyunjin was her passion and curiosity for life, but particularly with regard to technology and its role in society. Her high level of interest in computer science is obvious, but it's not just an interest in technology for its own sake; rather, I had the distinct impression that the vision she holds for her future role in developing technology embraces a much wider range of function and responsibility to the world, and that this is critically important to her.\nApart from these standout qualities, I found that Hyunjin possessed extraordinary organizational skills along with the ability to go directly at any task; she would take great pride just in the efficacy of completing them. Her presence in our research group was, in itself, a force to keep things on track. As we often had to deal with a huge set of problem-solving issues, both large and small, her ability to focus and stay organized often helped my own efforts to keep on top of everything needing attention.\nIf you'll be lucky enough to have the opportunity to work with Hyunjin, I can promise that it won't be long before your organization recognizes what a resource it has in this person."
   },
   "ming": {
     "name": "Ming Tan",
     "title": "Director of IT",
-    "lines": {
-      "0": "I have been a mentor for Hyunjin since 2018 through the U of Minnesota mentoring program. There are many things about her that have made this relationship very rewarding.",
-      "1": "1. She is intellectually curious. As an international student, she loves to learn and immerse herself in the American culture. And as a computer science student, she is interested in the different technologies and she constantly applies the new acquired skills on her personal projects.",
-      "2": "2. Hyunjin is a very motivated individual. She works hard in school (computer science major) and is always looking for internship/volunteer opportunities to expand her experience.",
-      "3": "3. Accountable - this is the one of the things that sets Hyunjin apart. During our bi-weekly meetings, we always put together a list of action items (e.g. reading assignments, resume building, personal site, etc) for the next meeting, and Hyunjin always completes the items on time.",
-      "4": "It has been a pleasure to work with such a quality person like Hyunjin!"
-    }
+    "lines": "I have been a mentor for Hyunjin since 2018 through the U of Minnesota mentoring program. There are many things about her that have made this relationship very rewarding.\n1. She is intellectually curious. As an international student, she loves to learn and immerse herself in the American culture. And as a computer science student, she is interested in the different technologies and she constantly applies the new acquired skills on her personal projects.\n2. Hyunjin is a very motivated individual. She works hard in school (computer science major) and is always looking for internship/volunteer opportunities to expand her experience.\n3. Accountable - this is the one of the things that sets Hyunjin apart. During our bi-weekly meetings, we always put together a list of action items (e.g. reading assignments, resume building, personal site, etc) for the next meeting, and Hyunjin always completes the items on time.\nIt has been a pleasure to work with such a quality person like Hyunjin!"
   }
 }
