2020 year end blog done

--- a/src/locales/kr/blog.json
+++ b/src/locales/kr/blog.json
@@ -3,7 +3,7 @@
   "2020": {
     "title": "2020년을 마무리하며",
     "date": "2021년 1월 18일",
-    "sub": "2020년은 모두에게 힘든 시간이었던 것 같다. 하지만 나에게는 조금 더 특별했다. 다사다난했던 한 해를 되돌아보며, 어떤 일들이 있었는지 정리해 보았다."
+    "sub": "2020년은 모두에게 힘든 시간이었지만, 나에게는 조금 더 특별했다. 다사다난했던 한 해를 되돌아보며, 어떤 일들이 있었는지 정리해 보았다."
   },
   "smartThings": {
     "title": "SmartThings 여름 인턴십 후기",
