Organize styling for blog

--- a/src/locales/kr/yearEnd.json
+++ b/src/locales/kr/yearEnd.json
@@ -25,9 +25,7 @@
   "regulations": {
     "title": "미국 유학생 강제 추방 위기",
     "firstLine": "가을 학기 개강이 점점 다가오자, 학교들은 수업 방식을 어떻게 해야 할지 결정해야 했다. 그때 당시 코로나-19 상황이 좋지 않았기 때문에, 대부분의 학교들은 온라인 수업을 선택했다. 미네소타 대학교도 그중에 하나였고, 내가 신청한 과목들도 모두 온라인 수업으로 확정된 상태였다. 그러던 와중에, 개강이 한 달 정도 남은 시점에서 <1>미국 이민 세관 단속국(이하 이민국)</1>이 새로운 행정 명령을 발동했다 - \"국제 학생들은 모든 수업을 대면 수업으로 수강해야 하며, 그러지 않을 경우 미국을 떠나야 한다.\" 더 자세한 내용은 다음과 같다.",
-    "order1": "미국에 이미 거주하고 있으며, 모든 수업이 온라인으로 진행될 경우 60일 안에 미국을 떠날 것.",
-    "order2": "미국에 계속 거주할 예정인 학생은 대면 수업을 실시하는 학교로 편입할 것.",
-    "order3": "위에 사항을 따르지 않을 경우, 추방 당할 수 있음.",
+    "order": "미국에 이미 거주하고 있으며, 모든 수업이 온라인으로 진행될 경우 60일 안에 미국을 떠날 것.\n미국에 계속 거주할 예정인 학생은 대면 수업을 실시하는 학교로 편입할 것.\n위에 사항을 따르지 않을 경우, 추방 당할 수 있음.",
     "secLine": "이민국이 이러한 행정 명령을 내린 이유에는 여러 배경이 있다. <1>ABC 뉴스</1>에 따르면, 트럼프 대통령은 학교를 '무조건 개방' 해야 한다고 반복해서 주장했다. 이것은 경제 활성화를 위한 그의 광범위한 정책 추진과 관련이 있다. <1>NPR 뉴스</1>에 따르면, 2018-2019년도 유학생들은 약 4,600억 원을 학교에 지불했고, 약 46만 개의 일자리를 지원했다. 그러므로 학교 입장에서 유학생을 잃는다는 것은 예산에 큰 타격을 받는 셈이다. 이 때문에 트럼프 행정부는 유학생을 타겟으로 삼아 학교를 강제로 오픈하려 했다.",
     "lines": "유학생 입장에서 졸업 직전 마지막 1년은 굉장히 중요한 시기이다. 외국인 유학생은 미국 학교에서 학위를 취득하면 OPT(Optional Practical Training: 졸업 후 1년 동안 미국 내에서 합법적으로 일할 수 있는 프로그램. STEM 학생은 최대 3년까지 가능)라는 것이 주어진다. 많은 유학생들이 OPT를 시작으로 미국에 체류하면서 H1B(취업비자), Green Card(영주권)를 취득하는 과정을 밟는다. 다시 말해, OPT는 졸업 후 미국에서 꿈을 펼치기 위한 엄청난 기회이자 유학생들만의 특권인 것이다. OPT를 신청하기 위해서는 마지막 두 학기를 무조건 미국 내에서 풀 타임으로 들어야 한다는 조건이 있다. 만약 내가 행정 명령으로 인해 미국을 떠날 경우, 이 모든 기회는 사라진다. 그렇기 때문에 그때 당시 나는 거의 멘붕 상태였다.\n하지만, 결과는 그의 뜻대로 이루어지지 않았다. 행정 명령이 발동되자, 학교는 분주히 움직였다. 미네소타 대학교를 포함한 여러 학교의 학장들은 행정 명령에 완곡히 반대한다는 성명과 함께 트럼프 행정부를 상대로 소송을 시작했다. 래리 바코우 하버드 대학교 총장은 성명에서 다음과 같이 말했다. \"우리는 이민국이 발표한 행정 명령에 대해 굉장히 나쁜 정책이며 불법이라고 생각합니다.\" 구글, 페이스북, 마이크로 소프트, 트위터 등 여러 IT 기업들은 정부의 조치가 자신들의 사업에 악영향을 미칠 것이라는 입장과 함께 소송전에 합류했다. 그리고 행정 명령이 발표된 지 일주일 만에 이민국은 정책을 전면 취소했다.\n가끔 이런 일들이 생길 때마다 현명하게 대처하려고는 하지만 충격이 오는 것은 사실이다. 미국에서 외국인 신분으로 살아간다는 것 자체가 워낙 제약이 많았기 때문에, 이제는 서서히 무뎌지려 한다. 다음에 또 이런 비슷한 상황이 발생 할 수 있으니, 마음 단단히 먹고 적절히 대비하고 있어야겠다."
   },
