Internship blog done

--- a/src/locales/en/yearEnd.json
+++ b/src/locales/en/yearEnd.json
@@ -1,7 +1,9 @@
 {
   "title": "2020 Year End Review",
-  "datePublished": "Jan 18, 2021 • 8 min read",
+  "datePublished": "Jan 18, 2021",
+  "minRead": "• 8 min read",
   "dateUpdated": "Feb 6, 2021 PM 5:29 CST",
+  "sub": "2020 was a tough year for everyone, but it was a bit more special to me. Looking back on the memorable year, I have tried to summarize what happened to me.",
   "covid": {
     "title": "COVID-19 Pandemic",
     "firstLine": "Minnesota in February is extremely cold. On the streets, the snow that has fallen all night is piled up to the knees, and some people wear <1>masks</1> to protect their faces from the cold wind. As usual, I went to school to take classes in the classroom, and after that, I went to the next class, talking with my friends. After finishing all of the classes, we had a dinner and went to the library to study together. I was having <1>ordinary</1> days without anything special.",
