--- a/src/locales/kr/yearEnd.json
+++ b/src/locales/kr/yearEnd.json
@@ -1,7 +1,9 @@
 {
   "title": "2020년을 마무리하며",
-  "datePublished": "2021년 1월 18일 • 8분 읽기",
+  "datePublished": "2021년 1월 18일",
+  "minRead": "• 8분 읽기",
   "dateUpdated": "2021년 2월 6일 오후 5:29 CST",
+  "sub": "2020년은 모두에게 힘든 시간이었지만, 나에게는 조금 더 특별했다. 다사다난했던 한 해를 되돌아보며, 어떤 일들이 있었는지 정리해 보았다.",
   "covid": {
     "title": "코로나-19 팬데믹",
     "firstLine": "2월의 미네소타는 정말 춥다. 거리에는 밤새 내린 눈이 무릎까지 쌓여있고, 사람들은 찬 바람으로부터 얼굴을 보호하기 위해 '마스크'를 쓰기도 한다. 나는 여느 때와 다름없이 학교 강의실에서 수업을 듣고, 수업이 끝나면 친구들과 함께 이야기를 나누며 다음 강의실로 향했다. 하루의 모든 일정이 마무리 되면 가볍게 저녁을 먹고, 도서관에 모여 공부도 함께 했다. 정말 특별한 것 없는 '평범한' 날들을 보내고 있었다.",
