Add button for QnA

--- a/src/locales/en/qna.json
+++ b/src/locales/en/qna.json
@@ -1,5 +1,6 @@
 {
-  "comment": "Please don't take it too seriously. It's just for fun.",
+  "moreQuestions": "More Questions",
+  "comment": "<1>Please don't take it too seriously. It's just for fun.</1>",
   "question": "Question",
   "answer": "Answer",
   "dateOfBirth": {
