--- a/src/locales/kr/qna.json
+++ b/src/locales/kr/qna.json
@@ -1,5 +1,6 @@
 {
-  "comment": "진지하게 보지 마시고, 재미로 봐주세요.",
+  "moreQuestions": "더 많은 질문 보기",
+  "comment": "<1>진지하게 보지 마시고, 재미로 봐주세요.</1>",
   "question": "질문",
   "answer": "답변",
   "dateOfBirth": {
