Edit blog contents

--- a/src/locales/kr/yearEnd.json
+++ b/src/locales/kr/yearEnd.json
@@ -16,7 +16,7 @@
   "blackLivesMatter": {
     "title": "인종 차별 반대 시위",
     "lines": "바람 한 점 없는 화창한 날씨의 5월 말 저녁 즈음이었다. 평소와 다름없이 일을 마치고 저녁을 먹으면서 뉴스를 보고 있었다. \"미네소타주 미니애폴리스에서 흑인 남성 조지 플로이드가 백인 경찰관의 무릎에 목이 눌려 숨졌습니다.\" 기자의 말과 함께 사건의 동영상도 함께 방송되었다. 사건이 일어난 장소는 내가 살고있는 아파트에서 10분 정도 떨어진 곳이었다. 내 주변 가까운 곳에서 이런 사건이 발생했다는 것에 충격이 더 컸다.\n미국 내 인종 차별은 (매우 안타깝게도) 자주 일어난다. 그래서 나는 이 사건도 그 수 많은 사건 중에 하나로 생각했고, 금방 잊혀질 줄 알았다. 어쩌면 나 자신, 동양인 여자로서 (운이 좋게도, 아직까지는) 큰 인종 차별을 겪어본 경험이 없어서 그런 생각을 했던 것 같다. 하지만 이 사건은 미니애폴리스를 시작으로 미국 전역에 인종 차별 반대 시위가 퍼지는 계기가 되었다. 많은 사람들은 거리로 나가 정의를 외쳤고, 정부는 그런 사람들을 폭도로 규정했다.\n나는 미국 사회에 대해 잘 몰랐기 때문에, 그때 당시 내가 할 수 있었던 건 스스로 educate 하는 것이었다. 내가 그 사람들의 삶을 직접 겪어 보지 않는 이상, 그들이 당하는 차별이 어느 정도이고, 그동안 받아 온 설움이 얼마나 되는지 모른다고 생각했다. 그래서 나는 언론에 나오는 것과 실제 일어나고 있는 일들, 역사적 배경, 사회적 특성 등을 찾아보며 공부했다. 제대로 알아야 판단할 수 있고, 또 그에 맞는 목소리를 낼 수 있기 때문이다.",
-    "learning": "이 사건으로 새로 알게 되고, 느낀 것도 정말 많지만, 한 가지 확실한 건 배움의 끝은 없다는 것이다. 새로운 걸 알게 되고, 배우면 배울수록 사건이 달라 보였다. 배움의 정도가 얼마나 세상을 변화시키는지 이번에 크게 깨달았다. 개개인이 어떻게 생각하고 행동하는지에 따라 사회에 큰 영향을 미친다. 그리고 그런 개인들이 모여 곧 문화가 된다. 그 문화들은 인종 차별과 같은 사회적 이슈들을 해결할 수도, 더 심화시킬 수 있다. 그래서 나는 더 공부하고, 더 많이 배우려고 한다. 다음 역사는 내가, 아니 우리가 만드는 거니까.",
+    "learning": "이 사건으로 새로 알게 되고, 느낀 것도 정말 많지만, 한 가지 확실한 건 배움의 끝은 없다는 것이다. 새로운 걸 알게 되고, 배우면 배울수록 사건이 달라 보였다. 배움의 정도가 얼마나 세상을 변화시키는지 이번에 크게 깨달았다. 개개인이 어떻게 생각하고 행동하는지에 따라 사회에 큰 영향을 미친다. 그리고 그런 개인들이 모여 곧 문화가 된다. 그 문화는 인종 차별과 같은 사회적 이슈들을 해결할 수도, 더 심화시킬 수 있다. 그래서 나는 더 공부하고, 더 많이 배우려고 한다. 다음 역사는 내가, 아니 우리가 만드는 거니까.",
     "confucius": "이 사건에 대한 나의 생각은 논어에 나왔던 한 구절로 대신하고 싶다.",
     "close": "\"<1>세상에 진정한 정의가 세워져 있으면 사람들은 어떠한 규칙이나 의무도 납득하고 따른다. 그렇기 때문에 비난과 비판의 소리가 불거지는 일은 없다. 즉, 사람들로부터 나오는 비난의 목소리란, 세상에 정의가 사라졌음을 알리는 경종과도 같다.</1>\" (235)"
   },
