--- a/src/locales/kr/faq.json
+++ b/src/locales/kr/faq.json
@@ -8,7 +8,7 @@
     "answer": "코딩, 이것 하나면 세상을 변화시킬 수 있다고 믿어요. 살면서 내 마음대로 안 되는 것들이 정말 많은데, 코딩으로는 안 되는 게 없어요. 만약 본인이 생활하면서 불편한 점이 있거나 꼭 필요한 프로그램이 있다고 가정해봅시다. 필요한 건 딱 하나, 컴퓨터에요. 컴퓨터 하나만 있으면 카페, 공원, 기숙사 등 어디서든 시작할 수 있어요. 그리고 그렇게 완성된 프로그램이 누군가의 생활에 큰 도움을 주고, 그로 인해 그/그녀가 행복한 하루를 살아간다고 생각해봤어요. <1>어떤 누군가의 인생에 기여한다는 것, 정말 멋지지 않나요?</1> 저는 그 누군가의 삶이 더 나은 삶이 될 수 있도록 열심히 코딩하는 중입니다."
   },
   "hobby": {
-    "question": "취미가 있나요?",
-    "answer": "책 보기, 글 쓰기"
+    "question": "쉬는 시간에는 무엇을 하며 보내나요?",
+    "answer": "조금 진부하게 들릴 수 있지만, 저는 쉴 때 책을 읽거나 가만히 앉아 글 쓰는 걸 좋아해요. 마음이 채워진달까. 책을 읽을 땐 작가와 대화하고, 글을 쓸 때는 저 자신과 마주하는 기분이 들어서 좋아요. 영상 제작에도 관심이 있어서 일상을 동영상으로 찍고 편집을 하기도 해요. 전혀 다른 분야의 새로운 것을 배우는 걸 좋아해서 일주일에 한 번씩은 모험을 떠나요. 최근에는 (2022년 12월 30일 기준) 힙합 댄스 클래스를 등록했어요! 제가 케이팝 댄스가수가 될 수 있을까요??🤭"
   }
 }
