--- a/src/locales/kr/qna.json
+++ b/src/locales/kr/qna.json
@@ -31,25 +31,13 @@
     "q": "최근에 가장 감동 받았던 순간?",
     "a": "\"좋은 사람이 원래 인복이 많아\"라는 말을 들었을 때"
   },
-  "parent": {
-    "q": "당신에게 부모님이란?",
-    "a": "선물 살때 가격 안 보고 사는 사람"
-  },
-  "sister": {
-    "q": "당신에게 언니란?",
-    "a": "안 쓰는 맥북 그냥 줄 수 있는 사람"
-  },
   "eat": {
     "q": "최근에 먹은 음식?",
-    "a": "밥에 김"
-  },
-  "cry": {
-    "q": "최근에 울었던 적?",
-    "a": "눈 아파서 맨날 울어요"
+    "a": "치폴레"
   },
   "food": {
     "q": "좋아하는 음식?",
-    "a": "돈가스"
+    "a": "타코"
   },
   "love": {
     "q": "당신에게 사랑이란?",
@@ -61,13 +49,13 @@
   },
   "worried": {
     "q": "요즘 걱정 있어?",
-    "a": "눈이 너무 아파. 더 나빠질까 봐 걱정이야"
+    "a": "잠을 잘 못자"
   },
   "wish": {
     "q": "소원 있어?",
     "a": "돌아가고 싶은 순간은 있어"
   },
-  "call": {
+  "dad": {
     "q": "가장 최근에 통화한 사람?",
     "a": "울아빠 맨날 전화해"
   },
@@ -102,5 +90,109 @@
   "cool": {
     "q": "마지막으로 자신에게 해주고 싶은 말?",
     "a": "야 제현진! 너 존* 멋있어!"
+  },
+  "mbti": {
+    "q": "Mbti?",
+    "a": "ENTJ"
+  },
+  "night": {
+    "q": "자기 전에 뭐해?",
+    "a": "생각을 글로 써"
+  },
+  "morning": {
+    "q": "일어나자마자 뭐해?",
+    "a": "홈팟 미니로 노래 틀어"
+  },
+  "lowerbody": {
+    "q": "좋아하는 운동 루틴?",
+    "a": "요즘 하체 뿌셔"
+  },
+  "song": {
+    "q": "요즘 자주 듣는 노래?",
+    "a": "Love the way"
+  },
+  "drone": {
+    "q": "갖고 싶은거 있어?",
+    "a": "드론"
+  },
+  "dream": {
+    "q": "가장 최근에 꾼 꿈?",
+    "a": "잠을 잘 못 잔다고!"
+  },
+  "phone": {
+    "q": "사용 중인 폰?",
+    "a": "아이폰 14"
+  },
+  "wallpaper": {
+    "q": "폰 배경 화면?",
+    "a": "기본 지구 모양"
+  },
+  "tmi": {
+    "q": "오늘의 tmi?",
+    "a": "이불 빨래 해떠"
+  },
+  "cooking": {
+    "q": "자신있는 요리?",
+    "a": "돼지고기 때려놓고 김치찌개 한번 해줘?"
+  },
+  "book": {
+    "q": "가장 최근에 읽은 책?",
+    "a": "Book"
+  },
+  "fragrance": {
+    "q": "좋아하는 향수?",
+    "a": "Citizen Jill"
+  },
+  "mavic": {
+    "q": "나에게 주고 싶은 선물이 있다면?",
+    "a": "드론!! 매빅!!"
+  },
+  "born": {
+    "q": "다시 태어난다면?",
+    "a": "나는 제현진 좋아"
+  },
+  "callORtext": {
+    "q": "전화 문자?",
+    "a": "전화"
+  },
+  "nightORafternoon": {
+    "q": "밤 낮?",
+    "a": "밤"
+  },
+  "summerORwinter": {
+    "q": "여름 겨울?",
+    "a": "겨울"
+  },
+  "mountainORsea": {
+    "q": "산 바다?",
+    "a": "산"
+  },
+  "alcoholORcoffee": {
+    "q": "술 커피?",
+    "a": "술"
+  },
+  "Naeng": {
+    "q": "물냉 비냉?",
+    "a": "물냉"
+  },
+  "beefORpork": {
+    "q": "소고기 돼지고기?",
+    "a": "삼겹살 최고"
+  },
+  "meatORkimchi": {
+    "q": "고기만두 김치만두?",
+    "a": "김치만두"
+  },
+  "beerORsoju": {
+    "q": "맥주 소주?",
+    "a": "소주"
+  },
+  "pizzaORchicken": {
+    "q": "피자 치킨?",
+    "a": "치킨"
+  },
+  "kimichORsoy": {
+    "q": "김치찌개 된장찌개?",
+    "a": "김치찌개"
   }
 }
