--- a/src/locales/kr/faq.json
+++ b/src/locales/kr/faq.json
@@ -9,6 +9,6 @@
   },
   "hobby": {
     "question": "쉬는 시간에는 무엇을 하며 보내나요?",
-    "answer": "조금 진부하게 들릴 수 있지만, 저는 쉴 때 책을 읽거나 가만히 앉아 글 쓰는 걸 좋아해요. 마음이 채워진달까. 책을 읽을 땐 작가와 대화하고, 글을 쓸 때는 저 자신과 마주하는 기분이 들어서 좋아요. 영상 제작에도 관심이 있어서 일상을 동영상으로 찍고 편집을 하기도 해요. 전혀 다른 분야의 새로운 것을 배우는 걸 좋아해서 일주일에 한 번씩은 모험을 떠나요. 최근에는 (2022년 12월 30일 기준) 힙합 댄스 클래스를 등록했어요! 제가 케이팝 댄스가수가 될 수 있을까요??🤭"
+    "answer": "조금 진부하게 들릴 수 있지만, 저는 쉴 때 책을 읽거나 가만히 앉아 글 쓰는 걸 좋아해요. 마음이 채워진다고 해야하나. 책을 읽을 땐 작가와 대화하고, 글을 쓸 때는 저 자신과 마주하는 기분이 들어서 좋아요. 영상 제작에도 관심이 있어서 일상을 동영상으로 찍고 편집을 하기도 해요. 전혀 다른 분야의 새로운 것을 배우는 걸 좋아해서 일주일에 한 번씩은 모험을 떠나요. 최근에는 (2022년 12월 30일 기준) 힙합 댄스 클래스를 등록했어요! 제가 케이팝 댄스가수가 될 수 있을까요??🤭"
   }
 }
