--- a/src/locales/kr/qna.json
+++ b/src/locales/kr/qna.json
@@ -23,10 +23,6 @@
     "q": "당신의 스무 살은?",
     "a": "술무살?"
   },
-  "backToSchool": {
-    "q": "학창 시절로 다시 돌아간다면?",
-    "a": "책 읽어 제현진"
-  },
   "impressiveMoment": {
     "q": "최근에 가장 감동 받았던 순간?",
     "a": "\"좋은 사람이 원래 인복이 많아\"라는 말을 들었을 때"
@@ -55,14 +51,6 @@
     "q": "소원 있어?",
     "a": "돌아가고 싶은 순간은 있어"
   },
-  "dad": {
-    "q": "가장 최근에 통화한 사람?",
-    "a": "울아빠 맨날 전화해"
-  },
-  "badHabit": {
-    "q": "고쳐야 할 나쁜 습관?",
-    "a": "한 번에 몰아서 많이 먹는 거"
-  },
   "important": {
     "q": "인생에서 가장 중요한 것은?",
     "a": "사람"
@@ -85,7 +73,7 @@
   },
   "happy": {
     "q": "지금 행복해?",
-    "a": "행복해지고싶어"
+    "a": "잘 모르겠어"
   },
   "cool": {
     "q": "마지막으로 자신에게 해주고 싶은 말?",
@@ -93,7 +81,7 @@
   },
   "mbti": {
     "q": "Mbti?",
-    "a": "ENTJ"
+    "a": "Entj"
   },
   "night": {
     "q": "자기 전에 뭐해?",
@@ -103,13 +91,9 @@
     "q": "일어나자마자 뭐해?",
     "a": "홈팟 미니로 노래 틀어"
   },
-  "lowerbody": {
-    "q": "좋아하는 운동 루틴?",
-    "a": "요즘 하체 뿌셔"
-  },
   "song": {
     "q": "요즘 자주 듣는 노래?",
-    "a": "Love the way"
+    "a": "Running on my mind"
   },
   "drone": {
     "q": "갖고 싶은거 있어?",
@@ -125,22 +109,18 @@
   },
   "wallpaper": {
     "q": "폰 배경 화면?",
-    "a": "기본 지구 모양"
+    "a": "기본 지구 테마"
   },
   "tmi": {
     "q": "오늘의 tmi?",
-    "a": "이불 빨래 해떠"
-  },
-  "cooking": {
-    "q": "자신있는 요리?",
-    "a": "돼지고기 때려놓고 김치찌개 한번 해줘?"
+    "a": "세차 해떠"
   },
   "book": {
     "q": "가장 최근에 읽은 책?",
     "a": "Book"
   },
   "fragrance": {
-    "q": "좋아하는 향수?",
+    "q": "지금 쓰고있는 향수?",
     "a": "Citizen Jill"
   },
   "mavic": {
@@ -154,10 +134,6 @@
   "callORtext": {
     "q": "전화 문자?",
     "a": "전화"
-  },
-  "nightORafternoon": {
-    "q": "밤 낮?",
-    "a": "밤"
   },
   "summerORwinter": {
     "q": "여름 겨울?",
