--- a/src/locales/kr/qna.json
+++ b/src/locales/kr/qna.json
@@ -36,7 +36,7 @@
     "a": "타코"
   },
   "love": {
-    "q": "당신에게 사랑이란?",
+    "q": "사랑이란?",
     "a": "보고 싶은 사람"
   },
   "hardestMoment": {
@@ -73,7 +73,7 @@
   },
   "happy": {
     "q": "지금 행복해?",
-    "a": "잘 모르겠어"
+    "a": "모르게떠"
   },
   "cool": {
     "q": "마지막으로 자신에게 해주고 싶은 말?",
@@ -116,7 +116,7 @@
     "a": "세차 해떠"
   },
   "book": {
-    "q": "가장 최근에 읽은 책?",
+    "q": "최근에 읽은 책?",
     "a": "Book"
   },
   "fragrance": {
@@ -170,5 +170,13 @@
   "kimichORsoy": {
     "q": "김치찌개 된장찌개?",
     "a": "김치찌개"
+  },
+  "goodAt": {
+    "q": "잘하는거 있어?",
+    "a": "나 다 잘해"
+  },
+  "happiness": {
+    "q": "가장 기쁠 때?",
+    "a": "사랑을 줄 때"
   }
 }
