--- a/src/locales/en/faq.json
+++ b/src/locales/en/faq.json
@@ -9,6 +9,6 @@
   },
   "hobby": {
     "question": "How do you spend your free time?",
-    "answer": "It might sound cliché, but I like to read a book and write in my spare time. Reading and writing help me to clear my mind. When I read, it feels like the words are talking to me and I'm communicating with the author. When I write down something about my feelings or emotions, I'm facing solely myself and I really enjoy the time. I’m also interested in creating videos so I capture my daily life and edit videos. I like learning new things from a completely different world and a few weeks ago (as of 12-30-2022), I registered for a hip-hop dance class! Who knows if I will become a k-pop dancer??🤭"
+    "answer": "It might sound cliché, but I like to read books and write in my spare time. Reading and writing help clear my mind. When I read, it feels like the words are talking to me and I'm communicating with the author. When I write something down about my feelings or emotions, I’m facing myself and I really enjoy the time. I’m also interested in creating videos so I capture my daily life and edit videos. I like learning new things from a completely different world and a few weeks ago (as of 12-30-2022), I registered for a hip-hop dance class! Who knows if I will become a k-pop dancer??🤭"
   }
 }
