--- a/src/locales/kr/qna.json
+++ b/src/locales/kr/qna.json
@@ -29,7 +29,7 @@
   },
   "eat": {
     "q": "최근에 먹은 음식?",
-    "a": "치폴레"
+    "a": "스시"
   },
   "food": {
     "q": "좋아하는 음식?",
@@ -178,5 +178,9 @@
   "happiness": {
     "q": "가장 기쁠 때?",
     "a": "사랑을 줄 때"
+  },
+  "twenty": {
+    "q": "당신의 스무 살은?",
+    "a": "술무살?"
   }
 }
