--- a/src/locales/en/shared.json
+++ b/src/locales/en/shared.json
@@ -1,3 +1,6 @@
 {
-  "hyunjin": "Hyunjin Jae"
+  "hyunjin": "Hyunjin Jae",
+  "currentlyReading": "Currently Reading",
+  "lastUpdated": "Last Updated",
+  "booksLastUpdated": "Jan 3, 2023"
 }
