--- a/src/locales/kr/shared.json
+++ b/src/locales/kr/shared.json
@@ -1,3 +1,6 @@
 {
-  "hyunjin": "제현진"
+  "hyunjin": "제현진",
+  "currentlyReading": "현재 읽고 있는 책",
+  "lastUpdated": "마지막 수정일",
+  "booksLastUpdated": "2023년 1월 3일"
 }
