Add last updated to FAQ

--- a/src/locales/en/shared.json
+++ b/src/locales/en/shared.json
@@ -2,5 +2,6 @@
   "hyunjin": "Hyunjin Jae",
   "currentlyReading": "Currently Reading",
   "lastUpdated": "Last Updated",
-  "booksLastUpdated": "Jan 3, 2023"
+  "booksLastUpdated": "Jan 3, 2023",
+  "faqLastUpdated": "Jan 2, 2023"
 }
